Aggiunto salvataggio wild cards